# template-project

./: .gitignore  README.md  SECURITY.MD  SECURITY.md  cookiecutter.json  pyproject.toml
{{cookiecutter.hyphenated}}/: .pylintrc  CODEOWNERS  pyproject.toml
{{cookiecutter.hyphenated}}/tests/: test_nothing.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: __init__.py  __main__.py
{{cookiecutter.underscored}}/: README.md  pyproject.toml
