[tool.poetry]
name = "template-project"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
cruft = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
