[tool.poetry]
name = "{{cookiecutter.hyphenated}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
max-line-length=200

# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
#extension-pkg-whitelist=pydantic
#load-plugins=pylint_pydantic
