[tool.poetry]
name = "{{cookicutter.hyphenated}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
authors = ["{{cookicutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
